[package]
name = "parse_url"
version = "0.1.0"
authors = ["Ilya Amelevich <ilya.amelevich@ya.ru>"]
edition = "2018"
license = "MIT"
description = "Simple comand line URL parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
url = "2.1.0"
